--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "lib": ["es6"]
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "es5",
+        "sourceMap": true,
+        "moduleResolution": "node",
+        "declaration": true,
+        "lib": ["es6"]
+    },
+    "include": [
+        "src/**/*.ts",
+        "index.ts"
+    ]
 }
